[package]
name = "monty-rb"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Ruby bindings for Monty Python interpreter"

[lib]
name = "monty"
crate-type = ["cdylib"]

[dependencies]
monty = { git = "https://github.com/pydantic/monty.git" }
magnus = { version = "0.8", features = ["rb-sys"] }
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"] }
num-bigint = "0.4"
